nav bar overlap issue is now fixed

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -9,9 +9,10 @@ header {
   position: fixed;
   top: 0;
   margin-bottom: 3em;
+   z-index: 2000;
 
   .navbar {
-    z-index: auto;
+
     display: flex;
     justify-content: space-between;
 
