--- a/styles/index.scss
+++ b/styles/index.scss
@@ -19,9 +19,10 @@ body {
     width: 100%;
     height: 800px;
     position: relative;
-    z-index: 0;
 
     .container {
+      position: relative;
+      z-index: 0;
       margin-top: 15em;
       margin-bottom: 5em;
 
@@ -67,7 +68,14 @@ body {
     }
   }
 
-  form {
+  .take-out-visible {
+    display: none;
+  }
+  .delivery-visible {
+    display: none;
+  }
+
+    form {
     display: flex;
     justify-content: center;
     background-color: #ffffff;
@@ -78,12 +86,10 @@ body {
 
     .takeout-reg {
       flex-direction: column;
-      display: none;
     }
 
     .delivery-reg {
       flex-direction: column;
-      display:none;
     }
 
     .registration-title {
@@ -116,11 +122,12 @@ body {
 
   }
 
-  hr {// These remove black line between text fields
-    border:1px solid black;
-    border-top: none;
-    border-bottom: none;
-  }
+    hr {// These remove black line between text fields
+      border:1px solid black;
+      border-top: none;
+      border-bottom: none;
+    }
+
 }
 
 
